使用 sonar 检查代码规范，并进行修改